# barra

./: Makefile  barra.cpp  meson.build
.cache/clangd/index/: barra.cpp.7650AD66EF35AF82.idx  button.cpp.C2923ED2284A1E9B.idx  button.h.E610738780C6603D.idx  config.h.E9F8799FD1E22ED8.idx  container.cpp.C35261A9429B6AF9.idx  container.h.DAD159DC062328A1.idx  drawable.cpp.F66359B06EC2FDCB.idx  drawable.h.5C8F0B20A0E0BA41.idx  row.cpp.0B3883AFF5AC23A4.idx  row.h.F7B0195EE36D30B4.idx  row.tpp.31836E35B7CF6E64.idx  text.cpp.F9613DAA6A83538D.idx  text.h.BBC51A6A2DF990D1.idx  widget.cpp.5AB048283F320398.idx  widget.h.46D6588BC2671A19.idx
core/: config.h
core/ui/: container.cpp  container.h  container.hpp  icon.h  layout.cpp  layout.hpp  marquee.cpp  text.cpp  text.h  text.hpp  widget.h
core/utils/: image.cpp  image.hpp
core/widgets/: clock.cpp  clock.hpp  media.cpp  media.hpp
src/: config.h  main.cpp
src/ui/: button.cpp  button.h  drawable.cpp  drawable.h  row.cpp  row.h  row.tpp  ui.h
